[gd_scene load_steps=7 format=3 uid="uid://tgw7ajvfcoyv"]

[ext_resource type="Texture2D" uid="uid://diqacbgbwhjv8" path="res://Res/icon.svg" id="1_n0ddm"]
[ext_resource type="Script" path="res://Script/script_director.gd" id="2_dc0yv"]
[ext_resource type="PackedScene" uid="uid://cf5777qxo87lq" path="res://SubScenes/monitor_room_sphere.tscn" id="3_h8xch"]
[ext_resource type="Texture2D" uid="uid://ba6wdpatlb7p7" path="res://Texture/DoorSequence/SecurityRoomInitialDoorSequence-Ver4-2025-6-110025.png" id="4_8nu3x"]

[sub_resource type="SphereMesh" id="SphereMesh_t4tah"]
flip_faces = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w46wb"]
render_priority = -1
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("4_8nu3x")

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="btnLeft" type="Button" parent="Control"]
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 111.0
offset_bottom = 645.0
toggle_mode = true
action_mode = 0
icon = ExtResource("1_n0ddm")
expand_icon = true

[node name="btnRight" type="Button" parent="Control"]
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 0
offset_left = 1042.0
offset_top = -2.0
offset_right = 1151.0
offset_bottom = 642.0
toggle_mode = true
action_mode = 0
icon = ExtResource("1_n0ddm")
expand_icon = true

[node name="scriptDirector" type="Node2D" parent="Control" node_paths=PackedStringArray("okgComAnim")]
script = ExtResource("2_dc0yv")
okgComAnim = NodePath("../../MeshInstance3D/AnimationPlayer")

[node name="openMapBtn" type="Button" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 0
offset_left = 145.0
offset_top = 581.0
offset_right = 553.0
offset_bottom = 645.0
icon = ExtResource("1_n0ddm")
icon_alignment = 1
expand_icon = true

[node name="checkComBtn" type="Button" parent="Control"]
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 0
offset_left = 603.0
offset_top = 579.0
offset_right = 1011.0
offset_bottom = 643.0
icon = ExtResource("1_n0ddm")
icon_alignment = 1
expand_icon = true

[node name="MeshInstance3D" parent="." instance=ExtResource("3_h8xch")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0)
mesh = SubResource("SphereMesh_t4tah")
surface_material_override/0 = SubResource("StandardMaterial3D_w46wb")

[connection signal="button_down" from="Control/btnLeft" to="Control/scriptDirector" method="onBtnLeftPressed"]
[connection signal="button_up" from="Control/btnLeft" to="Control/scriptDirector" method="onBtnLeftRelease"]
[connection signal="button_down" from="Control/btnRight" to="Control/scriptDirector" method="onBtnRightPressed"]
[connection signal="button_up" from="Control/btnRight" to="Control/scriptDirector" method="onBtnRightRelease"]
[connection signal="button_down" from="Control/checkComBtn" to="Control/scriptDirector" method="onCheckComPressed"]
[connection signal="animation_finished" from="MeshInstance3D/AnimationPlayer" to="Control/scriptDirector" method="monAnimFin"]

[editable path="MeshInstance3D"]
